<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    >

    <TableRow android:layout_width="match_parent">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_margin="@dimen/default_margin"/>

        <EditText
            android:id="@+id/name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:layout_margin="@dimen/default_margin"
            android:layout_span="2"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/age_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:layout_margin="@dimen/default_margin"/>

        <EditText
            android:id="@+id/age_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/age_hint"
            android:layout_margin="@dimen/default_margin"
            android:layout_span="2"
            />

    </TableRow>
    <TableRow
        android:layout_width="match_parent">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_label"
            android:layout_column="2"
            android:layout_margin="@dimen/default_margin"/>
    </TableRow>
</TableLayout>